[package]
name = "klbfw"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["KarpelesLab"]
description = "Rust client for interacting with RESTful API services"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for API key signing
ed25519-dalek = "1.0"
sha2 = "0.10"
base64 = "0.21"

# UUID for nonces
uuid = { version = "1.0", features = ["v4"] }

# URL handling
url = "2.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Upload support
tempfile = "3.0"
quick-xml = { version = "0.31", features = ["serialize"] }

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = ["blocking"]
blocking = []
async = ["tokio"]
