[package]
name = "klbfw"
version = "0.1.3"
edition = "2021"
rust-version = "1.88"
authors = ["KarpelesLab"]
description = "Comprehensive REST API client with OAuth2, API key authentication, and file upload support"
license = "MIT"
repository = "https://github.com/KarpelesLab/klbfw-rs"
homepage = "https://github.com/KarpelesLab/klbfw-rs"
documentation = "https://docs.rs/klbfw"
readme = "README.md"
keywords = ["rest", "api", "client", "http", "oauth2"]
categories = ["api-bindings", "network-programming", "web-programming::http-client"]

[dependencies]
# HTTP client (pure-Rust curl)
rsurl = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for API key signing (Ed25519 + SHA-256)
purecrypto = { version = "0.6", default-features = false, features = ["ec", "hash"] }
# Standard/URL-safe base64 (purecrypto only offers standard padded base64)
base64 = "0.21"

# UUID for nonces
uuid = { version = "1.0", features = ["v4"] }

# IDNA host encoding + x-www-form-urlencoded query/signature encoding
intl = { version = "0.5", default-features = false, features = ["idna", "full"] }
form_urlencoded = "1"

# Error handling
thiserror = "1.0"

# Upload support
tempfile = "3.0"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
rand = "0.8"
purecrypto = { version = "0.6", default-features = false, features = ["hash"] }
